mobile version complete

--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 </head>
 <body>
@@ -11,7 +13,7 @@
   <main class="main-content">
     <section class="introducing">
       <div class="introducing__wrapper">
-        <h2 class="inroducing__title">Авторский надзор от «петришин-строй» что это?</h2>
+        <h2 class="introducing__title">Авторский надзор от «петришин-строй» что это?</h2>
         <div class="introducing__info">
           <p class="introducing__text"><span class="introducing__mark">Авторский надзор от «Петришин-Строй» </span>- это комплексная услуга, которая включает в себя профессиональный контроль работ на объекте, обеспечивает слаженность всех подрядных организаций, оперативность принятия решений и устранения сложных переделок. Авторский надзор предполагает плановое посещение объекта автором проекта для уточнения деталей проекта, а также решение вопросов по проектной документации, возникающих у заказчика. В результате заказчик получает качественно выполненный ремонт в сроки по утвержденному дизайн-проекту.</p>
         </div>
@@ -58,7 +60,7 @@
         <h3 class="insertion__title">что включает в себя авторский надзор?</h3>
         <div class="insertion__packages">
           <div class="insertion__pack">
-            <h4 class="insertion__cap">Услуга «Авторский надзор от «Петришин-Строй»» (полный пакет)</h4>
+            <h4 class="insertion__cap">Услуга «Авторский надзор от <br class="insertion__gap"> «Петришин-Строй»» (полный пакет)</h4>
             <ul class="insertion__list list">
               <li class="insertion__item list__item">Необходимое для строителей корректирование, дополнение рабочего проекта в случае расхождения проекта с данным помещением (без изменения планировочного решения и общей концепции помещений и утверждённых позиций) (3 рабочих дня)
 </li>
@@ -75,8 +77,8 @@
             </ul>
           </div>
           <div class="insertion__pack">
-            <h4 class="insertion__cap">Услуги Авторского надзора, которые могут предоставляться отдельно</h4>
-            <ul class="insertion__list list">
+            <h4 class="insertion__cap insertion__cap--mobile-bottom">Услуги Авторского надзора, которые могут предоставляться отдельно</h4>
+            <ul class="insertion__list list insertion__list--mobile-bottom">
               <li class="insertion__item list__item">Консультации и оказание помощи при выборе и заказе чистовых отделочных материалов, мебели и элементов интерьера на выезде в магазины (до 4 часов каждый);
 
 </li>
@@ -89,7 +91,7 @@
 
     <section class="guarantees">
       <div class="guarantees__wrapper">
-        <h3 class="gurarantees__title">гарантии</h3>
+        <h3 class="guarantees__title">гарантии</h3>
         <div class="guarantees__info">
           <p class="gurantees__text">Авторский надзор гарантирует реализацию проекта именно в том виде, в каком он был спроектирован, изменен или дополнен его автором, как стороной, имеющей комплексное представление обо всем проектном решении в целом и его деталях.
 
@@ -107,43 +109,49 @@
         <h3 class="cost__title">стоимость авторского надзора</h3>
         <div class="cost__table">
           <div class="cost__col">
-            <span class="cost__table-cap">Наименование услуг</span>
-            <span class="cost__table-cap">Стоимость, руб.</span>
+            <span class="cost__table-cap cost__table-cap--name">Наименование услуг</span>
+            <span class="cost__table-cap cost__tabe-cap--cost">Стоимость, руб.</span>
             <span class="cost__table-cap cost__table-cap--mobile">Примечание</span>
           </div>
           <div class="cost__row">
-            <span class="row__cell">Полный пакет услуги «Авторский надзор от «Петришин-Строй» (до 120 м2)</span>
-            <span class="row__cell">700,00</span>
-            <span class="row__cell row__cell--mobile">Оказывается в течение каждого месяца из расчёта за м2 площади</span>
+            <span class="cost__cell cost__cell--name">Полный пакет услуги «Авторский надзор от «Петришин-Строй» (до 120 м2)</span>
+            <span class="cost__cell cost__cell--cost">700,00</span>
+            <span class="cost__cell cost__cell--mobile">Оказывается в течение каждого месяца из расчёта за м2 площади</span>
           </div>
           <div class="cost__row">
-            <span class="row__cell">Полный пакет услуги «Авторский надзор от «Петришин-Строй» (до 250 м2)</span>
-            <span class="row__cell">600,00</span>
-            <span class="row__cell row__cell--mobile">Оказывается в течение каждого месяца из расчёта за м2 площади
+            <span class="cost__cell cost__cell--name">Полный пакет услуги «Авторский надзор от «Петришин-Строй» (до 250 м2)</span>
+            <span class="cost__cell cost__cell--cost">600,00</span>
+            <span class="cost__cell cost__cell--mobile">Оказывается в течение каждого месяца из расчёта за м2 площади
 </span>
           </div>
           <div class="cost__row">
-            <span class="row__cell">Полный пакет услуги «Авторский надзор от «Петришин-Строй» (свыше 250 м2)</span>
-            <span class="row__cell">500,00</span>
-            <span class="row__cell row__cell--mobile">Оказывается в течение каждого месяца из расчёта за м2 площади
+            <span class="cost__cell cost__cell--name">Полный пакет услуги «Авторский надзор от «Петришин-Строй» (свыше 250 м2)</span>
+            <span class="cost__cell cost__cell--cost">500,00</span>
+            <span class="cost__cell cost__cell--mobile">Оказывается в течение каждого месяца из расчёта за м2 площади
 </span>
           </div>
           <div class="cost__row">
-            <span class="row__cell">Консультации и оказание помощи при выборе и заказе чистовых отделочных материалов, мебели и элементов интерьера на выезде в магазины (до 4 часов каждый)
+            <span class="cost__cell cost__cell--name cost__cell--bottom">Консультации и оказание помощи при выборе и заказе чистовых отделочных материалов, мебели и элементов интерьера на выезде в магазины (до 4 часов каждый)
 </span>
-            <span class="row__cell">6200</span>
-            <span class="row__cell row__cell--mobile">За выезд не более 4 часов</span>
+            <span class="cost__cell cost__cell--cost cost__cell--bottom">6200</span>
+            <span class="cost__cell cost__cell--mobile">За выезд не более 4 часов</span>
           </div>
         </div>
-        <p class="cost__allert">Заключив договор на авторский надзор, вы избавитесь от необходимости лично контролировать работу строителей, сэкономите время, нервы и, возможно, даже средства. А главное, вы получите качественный результат.</p>
+        <p class="cost__alert">Заключив договор на авторский надзор, вы избавитесь от необходимости лично контролировать работу строителей, сэкономите время, нервы и, возможно, даже средства. А главное, вы получите качественный результат.</p>
       </div>
     </section>
 
     <section class="questions">
-      <h3 class="questions__title">Остались вопросы?</h3>
+      <div class="questions__wrapper">
+        <h3 class="questions__title">Остались вопросы?</h3>
       <button class="btn questions__btn">Заказать бесплатную консультацию</button>
+      </div>
     </section>
 
   </main>
+
+  <footer class="main-footer">
+    footer
+  </footer>
 </body>
 </html>
